new datatable access/modify (get/set) interface, updated simple_vis_search project, progvar updating when moving to new program

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -6,6 +6,11 @@ commit:
 ------------
 current:
 
+* progexpr not finding in fun args
+* assignexpr did not update progvar: it was a move, not a copy: UAE!
+
+* profile loaddata -- strangely slow
+
 * NewLayer not working in netview
 
 * multi-test on hv
