misc small fixes, including bugfix to datatable column bugfix (noticed when backporting to b1), plus undo of svn setprops which kinda freaked me out when I first tried to do a commit.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,13 +5,11 @@ commit:
 ------------
 current:
 
-* do 2d scalarvallayer thing
-
 * progexpr not finding variables in function args
 
 * NewLayer not working in netview
 
-* bar graph mode??
+* bar graph mode??  -- easy to do.. just do it..  no fill..
 
 * multi-test on hv
 
