--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,10 +2,11 @@ leabra todo list:
 
 commit:
 
-* autoload datatable from file!  very convenient for large datatables -- small project files!
 
 ------------
 current:
+
+* prompt_load on datatable auto load
 
 * program SetVar should operate on the progvar and not on the underlying css guy -- then
   it doesn't matter when it is called relative to Init, etc
