--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -6,12 +6,13 @@ commit:
 ------------
 current:
 
-* prompt_load on datatable auto load
+* add StructUpdate brackets in Filter op
+* add col idx version of sort!
 
 * program SetVar should operate on the progvar and not on the underlying css guy -- then
   it doesn't matter when it is called relative to Init, etc
 
-* add CountExpr that works like filter but just counts number of times it is true!
+* VarInc, VarDec (var++, var--) -- can be useful
 
 * progexpr not finding variables in function args
 
@@ -27,15 +28,12 @@ current:
 
 * Program Init logic: do CheckConfig *after* Init function runs!?
 
-* ProgVar FLAG: CTRL_RO -- read only in control panel
-
 ---
 
 * #ARG_VAL_FM_n_xxx -- get init value of arg from given member (can be a path)
   * ProgEl* fm name!
 
-* #READ_ONLY -> + #EXPERT for non-system-y type data that contains values you might want 
-  to see (esp leabra etc) (revisit Network too)
+* ProgVar FLAG: CTRL_RO -- read only in control panel #374
 
 * datatable: 
   * Join should be symmetric
