--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,12 +2,15 @@ leabra todo list:
 
 commit:
 
+* add DataUpdate brackets in Filter op -- still doesn't fix problem!
+* add col idx version of sort!
 
 ------------
 current:
 
-* add StructUpdate brackets in Filter op
-* add col idx version of sort!
+* assignexpr "resp = output.units.gp[movie_unit][0].act_eq" gives parse err on t_eq !
+
+* add DataUpdate brackets in Filter op -- still doesn't fix problem!
 
 * program SetVar should operate on the progvar and not on the underlying css guy -- then
   it doesn't matter when it is called relative to Init, etc
