--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,11 +5,9 @@ commit:
 ------------
 current:
 
-* nflix: savg cor!
-
 * assignexpr "resp = output.units.gp[movie_unit][0].act_eq" gives parse err on t_eq !
 
-* add DataUpdate brackets in Filter op -- still doesn't fix problem!
+* CHECK: add DataUpdate brackets in Filter op -- still doesn't fix problem!
 
 * program SetVar should operate on the progvar and not on the underlying css guy -- then
   it doesn't matter when it is called relative to Init, etc
