fixed INHERITED for template classes, sorting of LAST and FIRST items for data Group proc, v3convert fix for el_base copy check.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,6 +5,8 @@ commit:
 ------------
 current:
 
+* Unit spec bias spec ptr not being copied in convert (and regular?)
+
 * assignexpr "resp = output.units.gp[movie_unit][0].act_eq" gives parse err on t_eq !
 
 * CHECK: add DataUpdate brackets in Filter op -- still doesn't fix problem!
