--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -7,9 +7,21 @@ commit:
 ------------
 current:
 
-* clearer if DynEnum type and token are separate..  Brad was right.  Dynenum edit not working.
+== Graph
 
-* CHECK: add DataUpdate brackets in Filter op -- still doesn't fix problem!
+* should not rescale based on string vals!
+* graph axis units not good; also add label of data column
+* bar graph mode??  -- easy to do.. just do it..  no fill..
+* add a few more lines, repl share axis with axis_1 and axis_2
+
+== Program
+
+* Add switch case guy: n_cases = enforced number of progels in case_code,
+  ProgExpr_List size -- use a CodeBlock for more guys!
+
+* Program Init logic: do CheckConfig *after* Init function runs!?
+
+* clearer if DynEnum type and token are separate..  Brad was right.  Dynenum edit not working.
 
 * program SetVar should operate on the progvar and not on the underlying css guy -- then
   it doesn't matter when it is called relative to Init, etc
@@ -18,17 +30,11 @@ current:
 
 * progexpr not finding variables in function args
 
+== Misc
+
 * NewLayer not working in netview
-
-* graph axis units not good; also add label of data column
-* bar graph mode??  -- easy to do.. just do it..  no fill..
-
+* CHECK: add DataUpdate brackets in Filter op -- still doesn't fix problem!
 * multi-test on hv
-
-* Add switch case guy: n_cases = enforced number of progels in case_code,
-  ProgExpr_List size -- use a CodeBlock for more guys!
-
-* Program Init logic: do CheckConfig *after* Init function runs!?
 
 ---
 
