--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,17 +2,12 @@ leabra todo list:
 
 commit:
 
-* Network scope on Layers and other Network objs
-* Program Init logic: do CheckConfig *after* Init function runs!  prevents catch-22
-* program SetVar should operate on the progvar and not on the underlying css guy -- then
-  it doesn't matter when it is called relative to Init, etc
-
-
 ------------
 current:
 
 == Graph
 
+* put ticks on other axis lines
 * should not rescale based on string vals!
 * graph axis units not good; also add label of data column
 * bar graph mode??  -- easy to do.. just do it..  no fill..
