* graph: Row_num label for x if row_num, most axis params now easily accessible    (not expert) * using taiStringDataHost for View Script and View Listing -- non modal!  added Print   to that guy too. * set WindowStaysOnTop for standard edit dialogs.. #397

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,10 +2,11 @@ leabra todo list:
 
 commit:
 
+* graph: Row_num label for x if row_num
+
 ------------
 current:
 
-graph: Row_num label for x if row_num
 
 == Program
 
