SoScrollBar fully functional and used for gridview!  its fun!  got rid of sub-viewer guy in panel.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,6 +5,9 @@ commit:
 ------------
 current:
 
+SoScrollBar: make a Q_OBJECT and add regular Qt signals as in the original 
+QtScrollbar -- internal callbacks do all the mediation.
+
 == PVLV:
 
 * output gate guys only get pv da, not lv??
