--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,10 +5,11 @@ commit:
 ------------
 current:
 
+* TransformBox translators are still weird.
+* netview layers get out of whack due to new max size but not updated?? not sure..
+
 == Netview:
 
-* manips conditional on arrow tool mode & bigger
-* Layer move digitize by units & z-axis move
 * Iconify layer -- add flag to layer itself, very easy to impl in viewer
   (add LayerFlags?) -- in viewer allow for diff values to be displayed in one unit?
   * also, what about compressing actual overall view -- this is presumably key,
@@ -16,9 +17,12 @@ current:
     Max size -- reduce extent to 1 unit, so a layer full of iconfied guys just goes small
     this seems good.  need to compute max size more frequently in display process -- will
     fix disp bug..
+* projection display options: BACK_FRONT, LEFT_RIGHT_F, LEFT_RIGHT_B -- color code the arrow
 * NewLayer not working in netview
 * Can't view weights with 2 nets in same view!
 * r.wt disp scale gets reset when you click on a new unit
+
+* Layer move digitize by units -- not clear how to do..  maybe in xform coupling eq?
 
 == Program
 
