--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,33 +2,37 @@ leabra todo list:
 
 commit:
 
+* BasicDataLoop -> NetDataLoop, which subclasses DataLoop -- need to convert existing
+LeabraEpoch programs to use NetDataLoop -- there is a button you just click on and it does 
+it for you.  Then, touch the guy (put something in desc) and Apply to get new 
+data_loop_index variable in .vars.  Then, need to fix UserScript just inside loop to
+refer to this data_loop_index insted of list_idx.  Sorry for all the hassle!  If you 
+have a standard set of programs, you can just do LoadFromProgLib on the LeabraEpoch
+and you'll get the updated stuff.  Similar actions needed for GroupedDataLoop ->
+NetGroupedDataLoop
+
+* also added new prjn display option per Brad's suggestion (all in frontal plane, L-R)
+
+* various other minor fixes. 
+
 ------------
 current:
 
-* no frame on graphs..
 * snapshot not working!
+* new network not showing in view all (ticket)
 
 == Netview:
 
-* Iconify layer -- add flag to layer itself, very easy to impl in viewer
-  (add LayerFlags?) -- in viewer allow for diff values to be displayed in one unit?
-  * also, what about compressing actual overall view -- this is presumably key,
-    but rather more difficult (moving layers around etc)  maybe only for counting the 
-    Max size -- reduce extent to 1 unit, so a layer full of iconfied guys just goes small
-    this seems good.  need to compute max size more frequently in display process -- will
-    fix disp bug..
-* projection display options: BACK_FRONT, LEFT_RIGHT_F, LEFT_RIGHT_B -- color code the arrow
-* NewLayer not working in netview
 * Can't view weights with 2 nets in same view!
 * r.wt disp scale gets reset when you click on a new unit
+* Iconify layer -- disp value
+* self prjn should be better..
 
 * Layer move digitize by units -- not clear how to do..  maybe in xform coupling eq?
 
 == Program
 
 * test new guys
-* some kind of simple DataLoop guy?
-* support for condlist datatables: what is needed?  
 * InitUnitNames -- display datatable with name legend function..
 * progexpr not finding variables in function args
 * brad's bug on drag of objs
