New functionality for displaying layer values: * on LayerView, disp_mode for OUTPUT_NAME -- output_name string (displays output_name instead of unit values) * also, frame only layer disp mode + function to align an existing view to the layer -- can replace layer with a gridview or whatever! * also created T3DataViewMain -- subclass of par with its own permanent transform that serves as base class for main views such as NetView, etc. * implemented #VIEWMENU directive

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,24 +2,28 @@ leabra todo list:
 
 commit:
 
+New functionality for displaying layer values:
+* on LayerView, disp_mode for OUTPUT_NAME -- output_name string (displays output_name
+instead of unit values)
+* also, frame only layer disp mode + function to align an existing view to the layer
+-- can replace layer with a gridview or whatever!
+* also created T3DataViewMain -- subclass of par with its own permanent transform
+that serves as base class for main views such as NetView, etc.
+* implemented #VIEWMENU directive
+
 ------------
 current:
-
-* it is still a todo: allow you to lookup/select enum values (dynenums) in
-  program expressions -- would be very useful..  probably just a simple
-  DynEnumItem token chooser with Program scope will do the trick -- I'll look
-  into it..
 
 * need hard enum val chooser in std progvar edit!  not sure how best to do that
  -- probably need a separate int that is used and then copied.
 
 == Netview:
 
-* Can't view weights with 2 nets in same view!
+* Can't view weights with 2 nets in same view! (callback register is global?? -- incl obj?)
 * Iconify layer -- disp value
 * self prjn should be better..
 
-* Layer move digitize by units -- not clear how to do..  maybe in xform coupling eq?
+* LOWPRI: .5 rounding fixed mostly: Layer move digitize by units -- not clear how to do..  maybe in xform coupling eq?
 
 == Program
 
