* new LayerView disp_modes fully functional (output name instead of units, etc) * unit names now propagate through 1-to-1 prjns via GetLocalistName() fun * InitNamedUnits will now auto-name network in init, if flag set and network_var * children of T3DataViewMain (in netview, i.e., LayerView) do not persist (they are created fresh in BuildAll) so you cannot store persistant user config data in the layerview -- had to make a NameVar_Array to hold in netview and code to sync with layers.. ugh. * Unit was getting default names!  had to inherit from taOBase and redefine SetName/Getname * end result is 12ax4s_demo_v4.proj which shows clear labels in input/output for what it is doing (no units!) nice.. (need unit group level names for pfc)

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,17 +2,13 @@ leabra todo list:
 
 commit:
 
-New functionality for displaying layer values:
-* on LayerView, disp_mode for OUTPUT_NAME -- output_name string (displays output_name
-instead of unit values)
-* also, frame only layer disp mode + function to align an existing view to the layer
--- can replace layer with a gridview or whatever!
-* also created T3DataViewMain -- subclass of par with its own permanent transform
-that serves as base class for main views such as NetView, etc.
-* implemented #VIEWMENU directive
+* new LayerView disp_modes fully functional (output name instead of units, etc)
 
 ------------
 current:
+
+* need output_name per unit_group (e.g., 12ax task, many cases)
+* double tokens listed in token chooser..hmm..
 
 * need hard enum val chooser in std progvar edit!  not sure how best to do that
  -- probably need a separate int that is used and then copied.
