--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -5,6 +5,9 @@ commit:
 ------------
 current:
 
+* dist computation driven reward in arm model
+* graph strings should use line color, not just black!
+
 * double tokens listed in token chooser..hmm..
 
 * need hard enum val chooser in std progvar edit!  not sure how best to do that
