--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,26 +2,24 @@ leabra todo list:
 
 commit:
 
-* graph strings always use associated line color, not black.
-
-* ticket #440: double tokens listed in token chooser -- due to #NO_TOKENS in
-  DataTableView -- in general not a good idea to include #NO_TOKENS in a 
-  parent of a guy who will later have tokens, esp if those tokens will be
-  looked for via a parent above the #NO_TOKENS guy..  #VIRT_BASE is sufficient.
-
-* taideck for hard_enum_val for ProgVar edit (435)
-
 ------------
 current:
 
 * join should not care about type mismatch -- something wrong in variant comparisons??
-* also Brad's filter bug with different types -- try a bunch of filter exprs
+  a=int -> b=float = OK
+  a=float -> b=int = NOT
+  a=string -> b=int = NOT
 
 * maketa parse: static const int     my_const = 0;
 
 * check: test datatable /matrix cut/paste ops
 
 * check: ticket 442 -- crash in connect from -- updated w/test case
+
+== Virtual Env
+
+* virtual cameras
+* collision detection
 
 == Netview:
 
@@ -33,11 +31,10 @@ current:
 
 == Program
 
+* ProgVar FLAG: CTRL_RO -- read only in control panel #374
 * progexpr not finding variables in function args
-* brad's bug on drag of objs
 * proglib: add dates (fill in!)
 * checkconfig on functions -- fun can only appear in functions (but not vice-versa..)
-* ProgVar FLAG: CTRL_RO -- read only in control panel #374
 
 == PVLV:
 
@@ -49,7 +46,6 @@ current:
 
 == Inventor
 
-* import object files
 * render objects to bitmap and use to present to network
 
 == Misc
