virtual env updates: collision and associated surface properties implemented lots of other fixes -- much more complete impl of ODE just need to add a camera obj and rendering of capsule and we should be good..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -10,6 +10,8 @@ current:
   a=float -> b=int = NOT
   a=string -> b=int = NOT
 
+* have init values of wt_scale parameters prior to adapting?? yes
+
 * check: test datatable /matrix cut/paste ops
 
 * check: ticket 442 -- crash in connect from -- updated w/test case
