--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,6 +2,8 @@ leabra todo list:
 
 commit:
 
+* ForLoop auto i var; Join fixed!; NULL ProgEl crashes fixed; taNBase name fixed
+
 == Virtual Env
 
 * initial rot maybe 180deg off from one computed by ode??
@@ -20,8 +22,6 @@ current:
 * program edit control panel -- causes stale of calling progs! (not that one) - #490
 
 * bp, cs, so!!
-
-* Add all blank progels to init_code and hit init!
 
 * have init values of wt_scale parameters prior to adapting?? yes
 
